<resources>
    <string name="app_name">Olimpiadas</string>
    <string name="ingressos">Ingressos</string>
    <string name="lbNome">Nome:</string>
    <string name="lbIdade">Idade:</string>
    <string name="lbModalidade">Modalidade:</string>
    <string name="lbPeriodo">Período:</string>
    <string name="rbManha">Manhã (9h - 12h)</string>
    <string name="rbTarde">Tarde (13h - 18h)</string>
    <string name="rbNoite">Noite (18h - 23h)</string>
    <string name="btnReserva">Reservar</string>
    <string name="lbNomeD">Nome: </string>
    <string name="lbIdadeD">Idade: </string>
    <string name="lbModalidadeD">Modalidade: </string>
    <string name="lbHorarioD">Horário: </string>
    <string name="btnConfirmarD">Confirmar</string>
    <string name="lbConfirmarD">Confirmação</string>
    <string name="lbOKD">OK</string>
    <string name="msgErroHome">Preencher Campos</string>
</resources>
